# chrome-core

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  justfile  mycelium.toml  package.json  preview.html
.github/workflows/: ci.yml
assets/: sidebar.css  sidebar.js
src/: lib.rs
tests/: sidebar.test.js
